# nice1-plugin

./: .gitignore  LICENSE.txt  README.md
PluginSource/: Inputs.txt  InputsDeltas.txt  JsonDataContainer.h  Plugin.cpp  Plugin_wasm.cpp  README_Connection_and_deserialization.md  README_Extended_EOS_networks_support.md  README_Use_of_audited_mechanics_contracts.md  json.c  wasm_compile.bat
PluginSource/Linux/: build.sh
PluginSource/UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters
PluginSource/UnitTest/x64/Debug/: UnitTest.dll.recipe  UnitTest.ilk  UnitTest.vcxproj.FileListAbsolute.txt  vc143.idb
PluginSource/UnitTest/x64/Debug/UnitTest.tlog/: CL.command.1.tlog  (+9 more)
PluginSource/UnitTest/x64/Release/: UnitTest.dll.recipe  UnitTest.ipdb
PluginSource/Windows/: Nice1Plugin.sln  Nice1Plugin.vcxproj  Nice1Plugin.vcxproj.filters
PluginSource/Windows/x64/Debug/: UnitTest.exp  UnitTest.lib
PluginSource/Windows/x64/Release/: UnitTest.exp  UnitTest.lib
PluginSource/android/: settings.gradle.kts
PluginSource/android/app/: build.gradle.kts
PluginSource/android/cppLib/: build.gradle.kts
PluginSource/android/cppLib/src/main/cpp/: CMakeLists.txt  main.cpp
PluginSource/android/cppLib/src/main/cpp/libs/arm64-v8a/: build.command.txt
PluginSource/android/cppLib/src/main/cpp/libs/armeabi-v7a/: build.command.txt
PluginSource/android/gradle/wrapper/: gradle-wrapper.properties
PluginSource/ios/: JsonDataContainer.h  Plugin.cpp  json.cpp
PluginSource/ios/iosBasicPlugin.xcodeproj/: project.pbxproj
PluginSource/ios/plugin/: Plugin.cpp  Plugin.h  json.cpp
PluginSource/ios/plugin.xcodeproj/: project.pbxproj
PluginSource/macOS/Nice1Plugin/: ASimplePlugin.bundle
PluginSource/macOS/Nice1Plugin.xcodeproj/: project.pbxproj
PluginSource/macOS/Nice1Plugin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PluginTest/PluginTest/: JsonDataContainer.h  PluginTest.cpp  PluginTest.vcxproj  PluginTest.vcxproj.filters  file2.txt
PluginTest/PluginTest/x64/Debug/: PluginTest.exe.recipe  PluginTest.ilk  PluginTest.vcxproj.FileListAbsolute.txt  vc143.idb
UE-Plugin/Nice1Plugin/: README.md
UE-Plugin/Nice1Plugin/Content/: Nice1LoginWebview.uasset
UnityProject/Assets/Nice1/Demos/: Nice1CharacterSelectorSample.unity  Nice1Sample.unity
UnityProject/Assets/Nice1/Editor/: HTMLConfiguration.cs
UnityProject/Assets/Nice1/Prefabs/: LoginPanelAnchor Variant.prefab
UnityProject/Assets/Nice1/Scripts/: Nice1LoginCanvas.cs  WalletManager.cs
UnityProject/Assets/StreamingAssets/webview/: base.html  index.html
UnityProject/Assets/Tests/: WalletManagerTestScript.cs
UnityProject/ProjectSettings/: ProjectSettings.asset
(+50 files in other folders)
